# flask-traefik

./: .gitignore  Dockerfile  README.md  list.sh  pyproject.toml  requirements.txt  service-stack.yml  traefik-stack.yml
.docker/nginx/: Dockerfile  nginx.conf
.docker/traefik/: Dockerfile
.docker/traefik/certs/: server.crt  server.key
.docker/traefik/config/: tls.yml
src/: app.py
